--- a/product_custom_attributes/i18n/fr.po
+++ b/product_custom_attributes/i18n/fr.po
@@ -1,15 +1,16 @@
 # Translation of OpenERP Server.
 # This file contains the translation of the following modules:
-#	* product_custom_attributes
+# 	* product_custom_attributes
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: OpenERP Server 7.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2013-10-16 10:39+0000\n"
-"PO-Revision-Date: 2014-03-11 12:42+0000\n"
+"POT-Creation-Date: 2015-11-20 21:24+0000\n"
+"PO-Revision-Date: 2015-11-20 16:41-0500\n"
 "Last-Translator: Graeme Gellatly <Unknown>\n"
 "Language-Team: \n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -17,37 +18,10 @@ msgstr ""
 "X-Generator: Launchpad (build 17007)\n"
 
 #. module: product_custom_attributes
-#: code:addons/product_custom_attributes/product.py:110
-#, python-format
-msgid "Information"
-msgstr "Information"
-
-#. module: product_custom_attributes
-#: model:ir.model,name:product_custom_attributes.model_product_product
-#: view:product.product:0
-msgid "Product"
-msgstr "Article"
-
-#. module: product_custom_attributes
-#: view:product.product:0
-msgid "attributes_placeholder"
-msgstr "attributes_placeholder"
-
-#. module: product_custom_attributes
-#: view:product.product:0
-msgid "Open Attributes"
-msgstr "Ouvrir les attributs"
-
-#. module: product_custom_attributes
-#: model:ir.actions.act_window,name:product_custom_attributes.open_product_by_attribute_set
-#: model:ir.ui.menu,name:product_custom_attributes.open_product_wizard
-msgid "Open Product By Attribute Set"
-msgstr "Ouvrir les articles par jeux d'attributs"
-
-#. module: product_custom_attributes
-#: view:open.product.by.attribute.set:0
-msgid "Open product by attributes set"
-msgstr "Ouvrir les articles par jeux d'attributs"
+#: model:ir.actions.act_window,name:product_custom_attributes.attribute_group_form_action
+#: model:ir.ui.menu,name:product_custom_attributes.menu_attribute_group_action
+msgid "Attribute Groups"
+msgstr "Groupes d'attributs"
 
 #. module: product_custom_attributes
 #: model:ir.model.fields,field_description:product_custom_attributes.field_open_product_by_attribute_set_attribute_set_id
@@ -58,53 +32,83 @@ msgid "Attribute Set"
 msgstr "Jeux d'attributs"
 
 #. module: product_custom_attributes
-#: view:open.product.by.attribute.set:0
-msgid "Open Product By attribute"
-msgstr "Ouvrir article par attribut"
-
-#. module: product_custom_attributes
-#: model:ir.model,name:product_custom_attributes.model_product_template
-msgid "Product Template"
-msgstr "Modèle d'article"
-
-#. module: product_custom_attributes
-#: view:product.product:0
-msgid "Save and Close"
-msgstr "Sauvegarder et fermer"
-
-#. module: product_custom_attributes
-#: model:ir.actions.act_window,name:product_custom_attributes.attribute_set_form_action
-#: model:ir.ui.menu,name:product_custom_attributes.menu_attribute_set_action
-msgid "Product Attribute Sets"
-msgstr "Jeux d'attributs de produit"
-
-#. module: product_custom_attributes
-#: model:ir.model.fields,field_description:product_custom_attributes.field_product_product_attribute_group_ids
-#: field:product.product,attribute_group_ids:0
-msgid "Groups"
-msgstr "Groupes"
-
-#. module: product_custom_attributes
-#: code:addons/product_custom_attributes/product.py:108
-#, python-format
-msgid "Custom Attributes"
-msgstr "Caractéristiques générales"
-
-#. module: product_custom_attributes
-#: view:open.product.by.attribute.set:0
-#: view:product.product:0
-msgid "Cancel"
-msgstr "Annuler"
-
-#. module: product_custom_attributes
 #: model:ir.ui.menu,name:product_custom_attributes.menu_attribute_in_config_product
 msgid "Attributes"
 msgstr "Attributs"
 
 #. module: product_custom_attributes
-#: model:ir.model,name:product_custom_attributes.model_open_product_by_attribute_set
-msgid "Wizard to open product by attributes set"
-msgstr "Assistant d'ouverture des articles par jeux d'attributs"
+#: view:open.product.by.attribute.set:product_custom_attributes.open_product_by_attribute_set_view
+#: view:product.product:product_custom_attributes.product_attributes_form_view
+msgid "Cancel"
+msgstr "Annuler"
+
+#. module: product_custom_attributes
+#: model:ir.model.fields,field_description:product_custom_attributes.field_open_product_by_attribute_set_create_uid
+#: field:open.product.by.attribute.set,create_uid:0
+msgid "Created by"
+msgstr ""
+
+#. module: product_custom_attributes
+#: model:ir.model.fields,field_description:product_custom_attributes.field_open_product_by_attribute_set_create_date
+#: field:open.product.by.attribute.set,create_date:0
+msgid "Created on"
+msgstr ""
+
+#. module: product_custom_attributes
+#: view:product.product:product_custom_attributes.product_template_form_view
+msgid "Custom Attributes"
+msgstr "Attributs Globaux"
+
+#. module: product_custom_attributes
+#: model:ir.model.fields,field_description:product_custom_attributes.field_product_category_attribute_set_id
+#: field:product.category,attribute_set_id:0
+msgid "Default Attribute Set"
+msgstr "Jeux d'attribut par défault"
+
+#. module: product_custom_attributes
+#: model:ir.model.fields,field_description:product_custom_attributes.field_open_product_by_attribute_set_id
+#: field:open.product.by.attribute.set,id:0
+msgid "ID"
+msgstr ""
+
+#. module: product_custom_attributes
+#: model:ir.model.fields,field_description:product_custom_attributes.field_open_product_by_attribute_set_write_uid
+#: field:open.product.by.attribute.set,write_uid:0
+msgid "Last Updated by"
+msgstr ""
+
+#. module: product_custom_attributes
+#: model:ir.model.fields,field_description:product_custom_attributes.field_open_product_by_attribute_set_write_date
+#: field:open.product.by.attribute.set,write_date:0
+msgid "Last Updated on"
+msgstr ""
+
+#. module: product_custom_attributes
+#: view:product.product:product_custom_attributes.product_template_form_view
+msgid "Open Attributes"
+msgstr "Ouvrir les attributs"
+
+#. module: product_custom_attributes
+#: model:ir.actions.act_window,name:product_custom_attributes.open_product_by_attribute_set
+#: model:ir.ui.menu,name:product_custom_attributes.open_product_wizard
+msgid "Open Product By Attribute Set"
+msgstr "Ouvrir les articles par jeux d'attributs"
+
+#. module: product_custom_attributes
+#: view:open.product.by.attribute.set:product_custom_attributes.open_product_by_attribute_set_view
+msgid "Open Product By attribute"
+msgstr "Ouvrir article par attribut"
+
+#. module: product_custom_attributes
+#: view:open.product.by.attribute.set:product_custom_attributes.open_product_by_attribute_set_view
+msgid "Open product by attributes set"
+msgstr "Ouvrir les articles par jeux d'attributs"
+
+#. module: product_custom_attributes
+#: model:ir.model,name:product_custom_attributes.model_product_product
+#: view:product.product:product_custom_attributes.product_attributes_form_view
+msgid "Product"
+msgstr "Article"
 
 #. module: product_custom_attributes
 #: model:ir.actions.act_window,name:product_custom_attributes.attribute_attribute_form_action
@@ -113,7 +117,44 @@ msgid "Product Attribute"
 msgstr "Attribut de produit"
 
 #. module: product_custom_attributes
-#: view:open.product.by.attribute.set:0
-#: view:product.product:0
+#: model:ir.actions.act_window,name:product_custom_attributes.attribute_set_form_action
+#: model:ir.ui.menu,name:product_custom_attributes.menu_attribute_set_action
+msgid "Product Attribute Sets"
+msgstr "Jeux d'attributs de produit"
+
+#. module: product_custom_attributes
+#: model:ir.model,name:product_custom_attributes.model_product_category
+msgid "Product Category"
+msgstr "Catégorie de produit"
+
+#. module: product_custom_attributes
+#: model:ir.model,name:product_custom_attributes.model_product_template
+msgid "Product Template"
+msgstr "Modèle d'article"
+
+#. module: product_custom_attributes
+#: view:product.product:product_custom_attributes.product_attributes_form_view
+msgid "Save and Close"
+msgstr "Sauvegarder et fermer"
+
+#. module: product_custom_attributes
+#: model:ir.model,name:product_custom_attributes.model_open_product_by_attribute_set
+msgid "Wizard to open product by attributes set"
+msgstr "Assistant d'ouverture des articles par jeux d'attributs"
+
+#. module: product_custom_attributes
+#: view:product.product:product_custom_attributes.product_attributes_form_view
+msgid "attributes_placeholder"
+msgstr "attributes_placeholder"
+
+#. module: product_custom_attributes
+#: view:open.product.by.attribute.set:product_custom_attributes.open_product_by_attribute_set_view
+#: view:product.product:product_custom_attributes.product_attributes_form_view
 msgid "or"
 msgstr "ou"
+
+#~ msgid "Information"
+#~ msgstr "Information"
+
+#~ msgid "Groups"
+#~ msgstr "Groupes"
